package com.Protocol;

public interface iRequest {
	
	String LOGIN = "800, LOGIN";
	
	String SIGNUP = "700, SIGNUP";
	
	String UPLOAD = "600, UPLOAD";
	
	String DOWNLOAD = "500, DOWNLOAD";
	
	String LOGOFF = "400, LOGOFF";

}
