@startuml

title __DISTRIBUTEDCOMPUTINGCASSL's Class Diagram__\n


    namespace om.Client {
      class com.Client.Client {
      }
    }

  


    namespace om.Client {
      class com.Client.ClientDriver {
      }
    }

  


    namespace om.Client {
      class com.Client.ClientHelper {
      }
    }

  


    namespace om.Client {
      class com.Client.ClientStreamSocket {
      }
    }

  


    namespace om.GUI {
      class com.GUI.ConnectToServerForm {
      }
    }

  


    namespace om.GUI {
      class com.GUI.HomeScreen {
      }
    }

  


    namespace om.GUI {
      class com.GUI.LoginForm {
      }
    }

  


    namespace om.GUI {
      class com.GUI.RegistrationForm {
      }
    }

  


    namespace om.GUI {
      class com.GUI.RequestAndResponse {
      }
    }

  


    namespace om.GUI {
      class com.GUI.TwitterUploadPage {
      }
    }

  


    namespace om.Protocol {
      interface com.Protocol.iProtocolResponse {
      }
    }

  


    namespace om.Protocol {
      interface com.Protocol.iRequest {
      }
    }

  


    namespace om.Server {
      class com.Server.Server {
      }
    }



    namespace om.Server {
      class com.Server.ServerDriver {
      }
    }

  


    namespace om.Server {
      class com.Server.ServerStreamSocket {
      }
    }

  


    namespace om.Server {
      class com.Server.ServerThread {
      }
    }

  


    namespace om.Users {
      class com.Users.User {
      }

  }
  

  com.Client.Client o-- com.Users.User : user
  com.Client.ClientHelper o-- com.Client.ClientStreamSocket : mySocket
  com.GUI.ConnectToServerForm -up-|> javax.swing.JFrame
  com.GUI.LoginForm -up-|> javax.swing.JFrame
  com.GUI.RegistrationForm -up-|> javax.swing.JFrame
  com.GUI.RequestAndResponse -up-|> javax.swing.JFrame
  com.GUI.TwitterUploadPage -up-|> javax.swing.JFrame
  com.Server.ServerStreamSocket -up-|> java.net.Socket
  com.Server.ServerThread .up.|> java.lang.Runnable
  com.Server.ServerThread o-- com.Server.ServerStreamSocket : myDataSocket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
